@@ -43,11 +43,19 @@ module PageObject
         end
 
         #
-        # @return [Array<String>] An array of strings representing the text value of the currently selected options.
+        # @return [Array<String>] An array of strings representing the text of the currently selected options.
         #
         def selected_options
           element.selected_options.map { |e| e.text }.compact
         end
+
+        #
+        # @return [Array<String>] An array of strings representing the value of the currently selected options.
+        #
+        def selected_values
+          element.selected_options.map { |e| e.value }.compact
+        end
+
 
         #
         # Returns true if the select list has one or more options where text or label matches the given value.
